@@ -54,7 +54,7 @@
 
 #endif // __clang_major__ < 3
 
-#define TKDND_OSX_KEVIN_WORKARROUND
+#define TKDND_OSX_KEVIN_WORKAROUND
 
 #define TkDND_Tag    1234
 
@@ -115,12 +115,20 @@ Tcl_Interp * TkDND_Interp(Tk_Window tkwin) {
 #define TKDND_NSLEFTMOUSEDOWNMASK NSLeftMouseDownMask
 #endif
 
+#if defined(__has_feature) && __has_feature(objc_arc)
+    #define TKDND_ARC
+#endif
+
+#if MAC_OS_X_VERSION_MIN_REQUIRED >= MAC_OS_X_VERSION_10_7
+    #define TKDND_LION_OR_LATER
+#endif
+
 /*
  * Here we need to wrap Cocoa methods in Cocoa class: methods for initiating,
  * tracking, and terminating drag from inside and outside the application.
  */
 
-@interface DNDView : NSView {
+@interface DNDView : NSView <NSDraggingSource> {
 //  NSDragOperation sourceDragMask;
 //  NSPasteboard   *sourcePasteBoard;
 //  NSMutableArray *draggedtypes;
@@ -139,6 +147,10 @@ DNDView*  TkDND_GetDNDSubview(NSView *view, Tk_Window tkwin);
 @end
 
 @implementation DNDView
+
+- (NSDragOperation)draggingSession:(NSDraggingSession *)session sourceOperationMaskForDraggingContext:(NSDraggingContext)context {
+  return NSDragOperationCopy;
+}
 
 - (void)setTag:(NSInteger) t {
   tag = t;
@@ -166,9 +178,9 @@ Tk_Window TkMacOSXGetTkWindow(NSWindow *w) {
 DNDView* TkDND_GetDNDSubview(NSView *view, Tk_Window tkwin) {
   NSRect frame;
   DNDView* dnd_view = [view viewWithTag:TkDND_Tag];
-#ifdef TKDND_OSX_KEVIN_WORKARROUND
+#ifdef TKDND_OSX_KEVIN_WORKAROUND
   Rect bnds;
-#endif /* TKDND_OSX_KEVIN_WORKARROUND */
+#endif /* TKDND_OSX_KEVIN_WORKAROUND */
 
   if (dnd_view == nil) {
     dnd_view = [[DNDView alloc] init];
@@ -183,7 +195,7 @@ DNDView* TkDND_GetDNDSubview(NSView *view, Tk_Window tkwin) {
      * found cases where the code below is needed, in order for DnD to work
      * correctly under Snow Leopard 10.6. So, I am restoring it...
      */
-#ifdef TKDND_OSX_KEVIN_WORKARROUND
+#ifdef TKDND_OSX_KEVIN_WORKAROUND
     /* Hack to make sure subview is set to take up entire geometry of window. */
     TkMacOSXWinBounds((TkWindow*)tkwin, &bnds);
     frame = NSMakeRect(bnds.left, bnds.top, 100000, 100000);
@@ -191,10 +203,10 @@ DNDView* TkDND_GetDNDSubview(NSView *view, Tk_Window tkwin) {
     if (!NSEqualRects(frame, [dnd_view frame])) {
       [dnd_view setFrame:frame];
     }
-#endif /* TKDND_OSX_KEVIN_WORKARROUND */
+#endif /* TKDND_OSX_KEVIN_WORKAROUND */
   }
 
-#ifndef TKDND_OSX_KEVIN_WORKARROUND
+#ifndef TKDND_OSX_KEVIN_WORKAROUND
   if (dnd_view == nil) return dnd_view;
 
   /* Ensure that we have the correct geometry... */
@@ -207,7 +219,7 @@ DNDView* TkDND_GetDNDSubview(NSView *view, Tk_Window tkwin) {
   if (!NSEqualRects(bounds, [dnd_view bounds])) {
     [dnd_view setBounds:bounds];
   }
-#endif /* TKDND_OSX_KEVIN_WORKARROUND */
+#endif /* TKDND_OSX_KEVIN_WORKAROUND */
   return dnd_view;
 }; /* TkDND_GetDNDSubview */
 
@@ -426,7 +438,6 @@ const NSString *TKDND_Obj2NSString(Tcl_Interp *interp, Tcl_Obj *obj) {
 
   Tk_Window     tkwin            = TkMacOSXGetTkWindow([self window]);
   Tcl_Interp   *interp           = Tk_Interp(tkwin);
-  // NSPasteboard *sourcePasteBoard = [sender draggingPasteboard];
   /* Get the coordinates of the cursor... */
   mouseLoc = [NSEvent mouseLocation];
 
@@ -727,7 +738,12 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
   }
 
   /* Initialize array of drag types... */
-  NSMutableArray *draggedtypes=[[[NSMutableArray alloc] init] autorelease];
+  NSMutableArray *draggedtypes;
+#ifdef TKDND_ARC
+  draggedtypes=[[NSMutableArray alloc] init];
+#else
+  draggedtypes=[[[NSMutableArray alloc] init] autorelease];
+#endif
   /* Iterate over all data, to collect the types... */
   for (i = 0; i < elem_nu; i++) {
     status = Tcl_GetIndexFromObj(interp, elem[i], (const char **) DropTypes,
@@ -772,8 +788,15 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
    * to drop targets via [sender draggingPasteboard]
    */
   NSPasteboard *dragpasteboard = [NSPasteboard pasteboardWithName:TKDND_NSPASTEBOARDNAMEDRAG];
-  NSMutableArray *dataitems    = [[[NSMutableArray alloc] init] autorelease];
-  NSMutableArray *filelist     = [[[NSMutableArray alloc] init] autorelease];
+  NSMutableArray *dataitems;
+  NSMutableArray *filelist;
+#ifdef TKDND_ARC
+  dataitems    = [[NSMutableArray alloc] init];
+  filelist     = [[NSMutableArray alloc] init];
+#else
+  dataitems    = [[[NSMutableArray alloc] init] autorelease];
+  filelist     = [[[NSMutableArray alloc] init] autorelease];
+#endif
   [dragpasteboard clearContents];
 
   if (added_filenames) {
@@ -781,7 +804,12 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
        use it, is through setPropertyList:forType, which operates only on the first
        item. So, call declareTypes, to create this first item... */
     //[dragpasteboard declareTypes:draggedtypes owner:dragview];
-    NSPasteboardItem *item = [[[NSPasteboardItem alloc] init] autorelease];
+    NSPasteboardItem *item;
+#ifdef TKDND_ARC
+    item = [[NSPasteboardItem alloc] init];
+#else
+    item = [[[NSPasteboardItem alloc] init] autorelease];
+#endif
     [dataitems addObject: item];
   }
 
@@ -799,7 +827,12 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
           /* Place the string into the clipboard. */
           NSString *datastring =
              [NSString stringWithUTF8String:Tcl_GetString(data_elem[i])];
-          NSPasteboardItem *item = [[[NSPasteboardItem alloc] init] autorelease];
+          NSPasteboardItem *item;
+#ifdef TKDND_ARC
+          item = [[NSPasteboardItem alloc] init];
+#else
+          item = [[[NSPasteboardItem alloc] init] autorelease];
+#endif
           [item setString:datastring forType:NSPasteboardTypeString];
           [dataitems addObject: item];
           //[dragpasteboard writeObjects:[NSArray arrayWithObject:item]];
@@ -822,7 +855,12 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
           /* Place HTML into the clipboard. */
           NSString *datastring =
              [NSString stringWithUTF8String:Tcl_GetString(data_elem[i])];
-          NSPasteboardItem *item = [[[NSPasteboardItem alloc] init] autorelease];
+          NSPasteboardItem *item;
+#ifdef TKDND_ARC
+          item = [[NSPasteboardItem alloc] init];
+#else
+          item = [[[NSPasteboardItem alloc] init] autorelease];
+#endif
           [item setString:datastring forType:NSPasteboardTypeHTML];
           [dataitems addObject: item];
 
@@ -890,16 +928,15 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
     dragicon = [NSImage imageNamed:NSImageNameIconViewTemplate];
   }
 
-  NSSize dragOffset = NSMakeSize(0.0, 0.0);
-
   /* Get the mouse coordinates, so as the icon can slide back at the correct
    * location, if the drag is cancelled. */
   NSPoint global         = [NSEvent mouseLocation];
-#if MAC_OS_X_VERSION_MIN_REQUIRED < MAC_OS_X_VERSION_10_7
-  NSPoint imageLocation  = [[dragview window] convertScreenToBase:global];
+  NSPoint imageLocation;
+#ifdef TKDND_LION_OR_LATER
+  NSRect imageRect = [[dragview window] convertRectFromScreen:NSMakeRect(global.x, global.y, 0, 0)];
+  imageLocation = imageRect.origin;
 #else
-  NSRect rect = [[dragview window] convertRectFromScreen:NSMakeRect(global.x, global.y, 0, 0)];
-  NSPoint imageLocation = rect.origin;
+  imageLocation = [[dragview window] convertScreenToBase:global];
 #endif
 
   NSEvent *event = [NSEvent mouseEventWithType:TKDND_NSLEFTMOUSEDRAGGED
@@ -914,7 +951,18 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
                                       pressure:0];
 
   /* Initiate the drag operation... */
-#if MAC_OS_X_VERSION_MIN_REQUIRED < MAC_OS_X_VERSION_10_7
+#ifdef TKDND_LION_OR_LATER
+  NSDraggingItem *dragItem = [[NSDraggingItem alloc] initWithPasteboardWriter:dragicon];
+  NSRect draggingRect = NSMakeRect(imageLocation.x, imageLocation.y, 0, 0);
+  [dragItem setDraggingFrame:draggingRect contents:dragpasteboard];
+  NSDraggingSession *draggingSession =
+    [dragview beginDraggingSessionWithItems:[NSArray arrayWithObject:dragItem]
+                                      event:event
+                                     source:dragview];
+  draggingSession.animatesToStartingPositionsOnCancelOrFail = YES;
+  draggingSession.draggingFormation = NSDraggingFormationNone;
+#else
+  NSSize dragOffset = NSMakeSize(0.0, 0.0);
   [dragview dragImage:dragicon
                    at:imageLocation
                offset:dragOffset
@@ -922,15 +970,7 @@ int TkDND_DoDragDropObjCmd(ClientData clientData, Tcl_Interp *interp,
            pasteboard:dragpasteboard
                source:dragview
             slideBack:YES];
-#else
-    [dragview dragImage:dragicon
-                   at:imageLocation
-               offset:dragOffset
-                event:event
-           pasteboard:dragpasteboard
-               source:dragview
-            slideBack:YES];
-#endif /* MAC_OS_X_VERSION_MIN_REQUIRED <= MAC_OS_X_VERSION_10_7 */
+#endif /* TKDND_LION_OR_LATER */
 
   /* Get the drop action... */
 
